// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExpanderRow /> should render correctly 1`] = `
.c0 {
  width: 100%;
  box-sizing: border-box;
  background-color: transparent;
}

<div
  class="c0"
/>
`;

exports[`<ExpanderRow /> with children should render correctly and have a data prop 1`] = `
.c0 {
  width: 100%;
  box-sizing: border-box;
  background-color: transparent;
}

<div
  class="c0"
>
  <div
    data="[object Object]"
  >
    Some Expander Content
  </div>
</div>
`;

exports[`<ExpanderRow numColumns /> should render correctly 1`] = `
.c0 {
  width: 100%;
  box-sizing: border-box;
  background-color: transparent;
}

<div
  class="c0"
/>
`;
